--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@antfu/eslint-config": "^0.27.0",
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
+    "@nuxtjs/tailwindcss": "^6.1.3",
+    "@tailwindcss/typography": "^0.5.8",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "@vue/eslint-config-standard": "^8.0.1",
@@ -26,6 +28,7 @@
     "lint-staged": "^13.0.3",
     "nuxt": "3.0.0-rc.12",
     "prettier": "^2.7.1",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.8.4"
   }
 }
